# PAIBox

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  TODO.md  pyproject.toml  test.py
.github/: release-drafter.yml
.github/workflows/: codecov.yml  dependabot.yml  poetry-publish.yml  pytest-ci.yml  release-drafter.yml
config/: output_dest_info.json  output_dest_more1152_info.json
docs/: Guide-of-PAIBox.md  Guide-of-Test.md  Support-Ops.md  Table-of-Terms.md
examples/mnist/data/: mnist_input_data7.npy
examples/mnist/example1/: README.md  main.py  model.py
examples/mnist/example1/weights/: Vthr1.npy  Vthr2.npy  fc1_weight_np.npy  fc2_weight_np.npy
examples/mnist/example2/: README.md  main.py
examples/mnist/example2/weights/: Vthr_conv1.npy  Vthr_conv2.npy  Vthr_fc1.npy  weight_conv1.npy  (+2 more)
hzy/: hzy_test.py
main/: base.py  collector.py  mixin.py  naming.py  tools.py  utils.py
main/backend/: constrs.py  context.py  mapper.py  placement.py
main/components/: __init__.py  projection.py
main/components/synapses/: base.py  conv_types.py  conv_utils.py
main/simulator/: __init__.py  encoder.py  probe.py  simulator.py  utils.py
paibox/: __init__.py  _types.py  base.py  collector.py  context.py  exceptions.py  general.py  generic.py  mixin.py  naming.py  network.py  node.py  processes.py  projection.py  test.py  types.py  utils.py
paibox/_logging/: __init__.py  base.py  registrations.py
paibox/backend/: __init__.py  _slice.py  checker.py  conf_exporting.py  conf_template.py  conf_types.py  config_template.py  constrs.py  context.py  graph_utils.py  graphs.py  graphs_types.py  mapper.py  overlap.py  placement.py  routing.py  runtime_compat.py  segment_utils.py  slice.py  succ_group.py  types.py
paibox/backend/experimental/: coreblock.py  routing.py
paibox/backend/runtime/: __init__.py  frame_decoder.py  frame_encoder.py  frame_gen.py  runtime.py
paibox/components/: __init__.py  _modules.py  functional.py  modules.py  operations.py  process.py  projection.py  types.py
paibox/components/neuron/: __init__.py  base.py  neurons.py  utils.py
paibox/components/synapses/: __init__.py  base.py  conv_types.py  conv_utils.py  synapses.py  transforms.py
paibox/connector/: __init__.py  connector.py  identifier.py  identifier.pyi  synapses.py
paibox/core/: __init__.py  _core_mode.py  coord.py  coord.pyi  core_defs.py  identifier.py  identifier.pyi  params_defs.py  params_types.py  reg_model.py  reg_types.py
paibox/core/neuron/: __init__.py  _neuron.py  _type.py  neuron.py  ram_types.py
paibox/frame/: __init__.py  base_frame.py  chip_input_encoder.py  chip_output_decoder.py  coord.py  data_decoder.py  data_encoder.py  frame.py  frame_gen.py  frame_gen_parse.py  frame_params.py  get_net_info.py  input_encoder.py  offline_frame.py  output_decoder.py  params.py  util.py
paibox/frames/: frames.py
paibox/implement/: __init__.py  axon_segment.py  builder.py  graphs.py  grouping.py  identifier.py  mapper.py  placement.py  routing.py
paibox/implement/experimental/: coreblock.py  placement.py  routing.py
paibox/libpaicore/v2/: __init__.py  _core_mode.py  _types.py  coordinate.py  frame_defs.py  hw_defs.py  hw_types.py  identifier.py  ram_model.py  reg_model.py  reg_types.py  route.py  router.py  routing_defs.py
paibox/neuron/: __init__.py  _neuron.py  base.py  group.py  neuron.py  neurons.py  ram_model.py  ram_types.py  utils.py
paibox/runtime/: __init__.py  runtime.py  types.py
paibox/simulator/: __init__.py  encoder.py  probe.py  processes.py  simulator.py  utils.py
paibox/synapses/: __init__.py  base.py  connector.py  conv_utils.py  identifier.py  identifier.pyi  synapses.py  transforms.py
paiboxruntime/: mytest.py  runtime.py
runtime/: runtime.py
test/: test_coord.py
tests/: __init__.py  conftest.py  shared_networks.py  test_base.py  test_grouping_strategy.py  test_libpaicore.py  test_mapper.py  test_network.py  test_neurons.py  test_placement.py  test_processes.py  test_projection.py  test_simulator.py  test_slice_network.py  test_synapses.py  test_transforms.py  test_types.py  test_utils.py  utils.py
tests/_logging/: logging_utils.py
tests/backend/: __init__.py  conftest.py  data.py  test_conf_exporting.py  test_conf_template.py  test_config_template.py  test_constrs.py  test_context.py  test_graph_utils.py  test_graphs.py  test_mapper.py  test_mapper_logging.py  test_placement.py  test_placement_logging.py  test_routing.py  test_routing_logging.py  test_segment_utils.py  test_separate.py  test_slice.py  test_succ_group.py  test_types.py
tests/backend/experimental/: test_coreblock.py  test_routing.py  test_routing2.py
tests/backend/runtime/: test_frame_gen.py  test_runtime.py
tests/components/: conftest.py  test_functional.py  test_projection.py  utils.py
tests/components/neuron/: conftest.py  test_neurons.py
tests/components/synapses/: test_synapses.py  test_transforms.py
tests/frame/: test_base_frame.py  test_frame_gen_parse.py  test_input_encoder.py  test_offline_frame.py  test_output_decoder.py  test_util.py
tests/implement/: data.py  test_axon.py  test_graphs.py  test_grouping.py  test_mapper.py  test_placement.py  test_routing.py
tests/implement/experimental/: test_placement.py  test_routing.py
tests/libpaicore/: conftest.py  test_hw_types.py  test_libpaicore.py  test_ram_model.py  test_reg_model.py  test_routing_defs.py
tests/libpaicore/frame/: conftest.py  test_base_frame.py  test_input_encoder.py  test_offline_frame.py  test_output_decoder.py
tests/neuron/: conftest.py  test_MetaNeuron.py  test_neurons.py
tests/onboard/: README.md  conftest.py  test_onboard.py
tests/runtime/: test_runtime.py
tests/runtime/test_data/: input_proj_info1.json  neuron_phy_loc1.json  neuron_phy_loc2.json  neuron_phy_loc3.json  output_dest_info.json  output_dest_info1.json  output_dest_info2.json  output_dest_info_more1152.json  output_dest_info_more1152_multi.json
tests/simulator/: test_encoder.py  test_probe.py  test_processes.py.bak  test_simulator.py
tests/synapses/: test_synapses.py  test_transforms.py
(+32 files in other folders)
