[project]
name = "paibox"
version = "1.2.2a2"
description = "Toolchain of PAICORE"
authors = [{ name = "Ziru Pan", email = "zrpan@stu.pku.edu.cn" }]
license = { text = "GPL-3.0-or-later" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy (>=2.0)",
    "pydantic (>=2.0.3,<3.0.0)",
    "paicorelib (>=1.4.0,<1.5.0)",
]
maintainers = [
    { name = "Hongtu Xia", email = "hongtux@pku.edu.cn" },
    { name = "Siyuan Gao", email = "siyuan-gao@outlook.com" },
    { name = "Zhaoyang Hao", email = "hzyang2218@gmail.com" },
    { name = "Ziru Pan", email = "zrpan@stu.pku.edu.cn" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Compilers",
]
keywords = ["PAICORE", "neuromorphic-hardware", "SNN", "Toolchain"]

[project.urls]
repository = "https://github.com/PAICookers/PAIBox"
homepage = "https://github.com/PAICookers/PAIBox"
documentation = "https://github.com/PAICookers/PAIBox#readme"

[tool.poetry]
packages = [{ include = "paibox" }]

# Includes the document
include = ["docs/Guide-of-PAIBox.md", "CHANGELOG.md"]

[tool.poetry.group.test]
optional = true

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.test.dependencies]
pytest = ">=8.0"
pytest-md = ">=0.2"
pytest-cov = ">=6.0"
orjson = ">=3.10"

[tool.poetry.group.dev.dependencies]
orjson = ">=3.10"

[tool.pytest.ini_options]
minversion = "8.0.0"
testpaths = ["tests"]
addopts = "--cov=paibox --cov-report=term"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "primary"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
